# 项目名字
SET(CURRENT_TARGET_NAME test)
SET(CURRENT_SOURCE_DIR  ${CMAKE_CURRENT_SOURCE_DIR})

# Poco库配置
IF(WIN32)
    SET(Poco_DIR              "${CMAKE_PROJECT_ROOT_DIR}/3rd/poco/.build/windows/x64-${CMAKE_BUILD_TYPE}/Poco")
    SET(POCO_LIBRARY_DIR      "${CMAKE_PROJECT_ROOT_DIR}/3rd/poco/.build/windows/x64-${CMAKE_BUILD_TYPE}/lib")
    SET(POCO_MYSQL_ROOT_DIR   "${CMAKE_PROJECT_ROOT_DIR}/../3rd-libs/mysql-8.0.33/x64-windows")
    SET(POCO_OPENSSL_ROOT_DIR "${CMAKE_PROJECT_ROOT_DIR}/../3rd-libs/openssl-1.1.1t/x64-windows")
ELSE()
    SET(Poco_DIR              "${CMAKE_PROJECT_ROOT_DIR}/3rd/poco/.build/linux/x64-${CMAKE_BUILD_TYPE}/Poco")
    SET(POCO_LIBRARY_DIR      "${CMAKE_PROJECT_ROOT_DIR}/3rd/poco/.build/linux/x64-${CMAKE_BUILD_TYPE}/lib")
    SET(POCO_MYSQL_ROOT_DIR   "${CMAKE_PROJECT_ROOT_DIR}/../3rd-libs/mysql-8.0.33/x64-ubuntu-24.04")
    SET(POCO_OPENSSL_ROOT_DIR "${CMAKE_PROJECT_ROOT_DIR}/../3rd-libs/openssl-1.1.1t/x64-ubuntu-24.04")
ENDIF()

SET(CMAKE_MODULE_PATH    "${CMAKE_PROJECT_ROOT_DIR}/3rd/poco/cmake" ${CMAKE_MODULE_PATH})
SET(MYSQL_ROOT_DIR       "${POCO_MYSQL_ROOT_DIR}"           CACHE PATH "MySQL root" FORCE)
SET(MYSQL_INCLUDE_DIR    "${POCO_MYSQL_ROOT_DIR}/include"   CACHE PATH "MySQL include directory" FORCE)
SET(OPENSSL_ROOT_DIR     "${POCO_OPENSSL_ROOT_DIR}"         CACHE PATH "OpenSSL root" FORCE)
SET(OPENSSL_INCLUDE_DIR  "${POCO_OPENSSL_ROOT_DIR}/include" CACHE PATH "OpenSSL include directory" FORCE)

IF(WIN32)
    SET(MYSQL_LIBRARY          "${POCO_MYSQL_ROOT_DIR}/lib/libmysql.lib"    CACHE FILEPATH "MySQL client library" FORCE)
    SET(OPENSSL_SSL_LIBRARY    "${POCO_OPENSSL_ROOT_DIR}/lib/libssl.lib"    CACHE FILEPATH "OpenSSL SSL library" FORCE)
    SET(OPENSSL_CRYPTO_LIBRARY "${POCO_OPENSSL_ROOT_DIR}/lib/libcrypto.lib" CACHE FILEPATH "OpenSSL Crypto library" FORCE)
ELSE()
    SET(MYSQL_LIBRARY          "${POCO_MYSQL_ROOT_DIR}/lib/libmysqlclient.so.21.2.33" CACHE FILEPATH "MySQL client library" FORCE)
    SET(OPENSSL_SSL_LIBRARY    "${POCO_OPENSSL_ROOT_DIR}/lib/libssl.so.1.1"           CACHE FILEPATH "OpenSSL SSL library" FORCE)
    SET(OPENSSL_CRYPTO_LIBRARY "${POCO_OPENSSL_ROOT_DIR}/lib/libcrypto.so.1.1"        CACHE FILEPATH "OpenSSL Crypto library" FORCE)
ENDIF()

FIND_PACKAGE(MySQL   REQUIRED)
FIND_PACKAGE(OpenSSL REQUIRED)
FIND_PACKAGE(Poco    REQUIRED COMPONENTS
    Foundation
    Encodings
    XML
    JSON
    Util
    Net
    NetSSL
    Crypto
    Data
    DataSQLite
    DataMySQL
    Redis
    JWT
    Prometheus
    Zip
)

ADD_LIBRARY(poco_all INTERFACE)
TARGET_LINK_LIBRARIES(poco_all INTERFACE
    Poco::Foundation
    Poco::Encodings
    Poco::XML
    Poco::JSON
    Poco::Util
    Poco::Net
    Poco::NetSSL
    Poco::Crypto
    Poco::Data
    Poco::DataSQLite
    Poco::DataMySQL
    Poco::Redis
    Poco::JWT
    Poco::Prometheus
    Poco::Zip
)

# Poco运行时库拷贝命令：普通文件按差异拷贝，软链接按链接关系重建
SET(POCO_RUNTIME_COPY_SCRIPT "${CMAKE_CURRENT_BINARY_DIR}/copy-poco-runtime.cmake")
FILE(WRITE "${POCO_RUNTIME_COPY_SCRIPT}" [=[
IF(NOT DEFINED POCO_RUNTIME_SOURCE_DIR)
    MESSAGE(FATAL_ERROR "POCO_RUNTIME_SOURCE_DIR is not defined")
ENDIF()

IF(NOT DEFINED POCO_RUNTIME_TARGET_DIR)
    MESSAGE(FATAL_ERROR "POCO_RUNTIME_TARGET_DIR is not defined")
ENDIF()

IF(NOT EXISTS "${POCO_RUNTIME_SOURCE_DIR}")
    MESSAGE(FATAL_ERROR "Poco runtime directory does not exist: ${POCO_RUNTIME_SOURCE_DIR}")
ENDIF()

FILE(MAKE_DIRECTORY "${POCO_RUNTIME_TARGET_DIR}")
FILE(GLOB POCO_RUNTIME_FILES LIST_DIRECTORIES FALSE "${POCO_RUNTIME_SOURCE_DIR}/*")

FOREACH(POCO_RUNTIME_SOURCE_FILE ${POCO_RUNTIME_FILES})
    GET_FILENAME_COMPONENT(POCO_RUNTIME_FILE_NAME "${POCO_RUNTIME_SOURCE_FILE}" NAME)
    SET(POCO_RUNTIME_TARGET_FILE "${POCO_RUNTIME_TARGET_DIR}/${POCO_RUNTIME_FILE_NAME}")

    IF(IS_SYMLINK "${POCO_RUNTIME_SOURCE_FILE}")
        FILE(READ_SYMLINK "${POCO_RUNTIME_SOURCE_FILE}" POCO_RUNTIME_LINK_TARGET)
        FILE(REMOVE "${POCO_RUNTIME_TARGET_FILE}")
        EXECUTE_PROCESS(
            COMMAND "${CMAKE_COMMAND}" -E create_symlink
                "${POCO_RUNTIME_LINK_TARGET}"
                "${POCO_RUNTIME_TARGET_FILE}"
            RESULT_VARIABLE POCO_RUNTIME_COPY_RESULT
        )
    ELSE()
        EXECUTE_PROCESS(
            COMMAND "${CMAKE_COMMAND}" -E copy_if_different
                "${POCO_RUNTIME_SOURCE_FILE}"
                "${POCO_RUNTIME_TARGET_FILE}"
            RESULT_VARIABLE POCO_RUNTIME_COPY_RESULT
        )
    ENDIF()

    IF(NOT POCO_RUNTIME_COPY_RESULT EQUAL 0)
        MESSAGE(FATAL_ERROR "Failed to copy Poco runtime: ${POCO_RUNTIME_SOURCE_FILE}")
    ENDIF()
ENDFOREACH()
]=])

SET(POCO_RUNTIME_COPY_COMMANDS
    COMMAND ${CMAKE_COMMAND}
        "-DPOCO_RUNTIME_SOURCE_DIR=${POCO_LIBRARY_DIR}"
        "-DPOCO_RUNTIME_TARGET_DIR=${PROJECT_DEBUGGER_WORKING_DIRECTORY}"
        -P "${POCO_RUNTIME_COPY_SCRIPT}"
)

# 头文件目录
SET(CURRENT_INCLUDE_DIRS
    ${CURRENT_SOURCE_DIR}
    ${CMAKE_PROJECT_ROOT_DIR}/3rd/doctest/doctest
    ${CMAKE_PROJECT_ROOT_DIR}/src
)

# 宏定义、编译选项、链接库
IF(WIN32)
    # 宏定义
    SET(CURRENT_COMPILE_DEFINITIONS
        # ...
    )

    # 编译选项
    SET(CURRENT_COMPILE_OPTIONS
        # ...
    )

    # 链接库
    SET(CURRENT_LINK_LIBS
        mimalloc
        poco_all
    )
ELSE()
    # 宏定义
    SET(CURRENT_COMPILE_DEFINITIONS
        # ...
    )

    # 编译选项
    SET(CURRENT_COMPILE_OPTIONS
        # ...
    )

    # 链接库
    SET(CURRENT_LINK_LIBS
        mimalloc
        poco_all
    )
ENDIF()

# test源文件
FILE(GLOB_RECURSE TEST_SRC_LIST
    ${CURRENT_SOURCE_DIR}/*.h
    ${CURRENT_SOURCE_DIR}/*.inl
    ${CURRENT_SOURCE_DIR}/*.hpp
    ${CURRENT_SOURCE_DIR}/*.c
    ${CURRENT_SOURCE_DIR}/*.cc
    ${CURRENT_SOURCE_DIR}/*.cpp
)

# doctest源文件
SET(DOCTEST_SRC_LIST
    ${CMAKE_PROJECT_ROOT_DIR}/3rd/doctest/doctest/doctest.h
)

# 生成可执行文件
ADD_EXECUTABLE(${CURRENT_TARGET_NAME} ${TEST_SRC_LIST} ${DOCTEST_SRC_LIST})
PROJECT_TARGET_APPLY_COMMON_OPTIONS(${CURRENT_TARGET_NAME})
TARGET_INCLUDE_DIRECTORIES(${CURRENT_TARGET_NAME} PRIVATE ${CURRENT_INCLUDE_DIRS})
TARGET_COMPILE_DEFINITIONS(${CURRENT_TARGET_NAME} PRIVATE ${CURRENT_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(${CURRENT_TARGET_NAME}     PRIVATE ${CURRENT_COMPILE_OPTIONS})
TARGET_LINK_DIRECTORIES(${CURRENT_TARGET_NAME}    PRIVATE ${PROJECT_DEBUGGER_WORKING_DIRECTORY})
TARGET_LINK_LIBRARIES(${CURRENT_TARGET_NAME}      PRIVATE ${CURRENT_LINK_LIBS})

# 其它设置
IF(WIN32)
    # MSVC运行库设置
    SET_PROPERTY(TARGET ${CURRENT_TARGET_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")

    # 导出所有符号设置
    # SET_PROPERTY(TARGET ${CURRENT_TARGET_NAME} PROPERTY WINDOWS_EXPORT_ALL_SYMBOLS True)
    # SET_PROPERTY(TARGET ${CURRENT_TARGET_NAME} PROPERTY ENABLE_EXPORTS True)

    # VS工程设置
    SET_PROPERTY(TARGET ${CURRENT_TARGET_NAME} PROPERTY FOLDER "projects")
    SET_PROPERTY(TARGET ${CURRENT_TARGET_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_DEBUGGER_WORKING_DIRECTORY}")

    SOURCE_GROUP(TREE ${CURRENT_SOURCE_DIR} PREFIX "test"
        FILES ${TEST_SRC_LIST})
    SOURCE_GROUP(TREE ${CMAKE_PROJECT_ROOT_DIR}/3rd/doctest/doctest PREFIX "doctest"
        FILES ${DOCTEST_SRC_LIST})

    # Windows平台下的Poco & MySQL & OpenSSL使用的是动态库，所以需要将其对应的动态库拷贝至生成目录
    ADD_CUSTOM_COMMAND(TARGET ${CURRENT_TARGET_NAME} PRE_BUILD
        # Poco
        ${POCO_RUNTIME_COPY_COMMANDS}
        # MySQL
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            ${POCO_MYSQL_ROOT_DIR}/lib/libmysql.lib
            ${PROJECT_DEBUGGER_WORKING_DIRECTORY}
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            ${POCO_MYSQL_ROOT_DIR}/lib/libmysql.dll
            ${PROJECT_DEBUGGER_WORKING_DIRECTORY}
        # OpenSSL
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            ${POCO_OPENSSL_ROOT_DIR}/lib/libssl.lib
            ${PROJECT_DEBUGGER_WORKING_DIRECTORY}
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            ${POCO_OPENSSL_ROOT_DIR}/lib/libcrypto.lib
            ${PROJECT_DEBUGGER_WORKING_DIRECTORY}
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            ${POCO_OPENSSL_ROOT_DIR}/lib/libssl-1_1-x64.dll
            ${PROJECT_DEBUGGER_WORKING_DIRECTORY}
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            ${POCO_OPENSSL_ROOT_DIR}/lib/libcrypto-1_1-x64.dll
            ${PROJECT_DEBUGGER_WORKING_DIRECTORY}
    )
ELSE()
    # Linux平台下的Poco & MySQL & OpenSSL使用的是动态库，所以需要将其对应的动态库拷贝至生成目录
    ADD_CUSTOM_COMMAND(TARGET ${CURRENT_TARGET_NAME} PRE_BUILD
        # Poco
        ${POCO_RUNTIME_COPY_COMMANDS}
        # MySQL
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            ${POCO_MYSQL_ROOT_DIR}/lib/libmysqlclient.so.21.2.33
            ${PROJECT_DEBUGGER_WORKING_DIRECTORY}
        COMMAND ${CMAKE_COMMAND} -E chdir ${PROJECT_DEBUGGER_WORKING_DIRECTORY}
            ln -sf libmysqlclient.so.21.2.33 libmysqlclient.so.21
        COMMAND ${CMAKE_COMMAND} -E chdir ${PROJECT_DEBUGGER_WORKING_DIRECTORY}
            ln -sf libmysqlclient.so.21 libmysqlclient.so
        # OpenSSL
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            ${POCO_OPENSSL_ROOT_DIR}/lib/libssl.so.1.1
            ${PROJECT_DEBUGGER_WORKING_DIRECTORY}
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            ${POCO_OPENSSL_ROOT_DIR}/lib/libcrypto.so.1.1
            ${PROJECT_DEBUGGER_WORKING_DIRECTORY}
        COMMAND ${CMAKE_COMMAND} -E chdir ${PROJECT_DEBUGGER_WORKING_DIRECTORY}
            ln -sf libssl.so.1.1 libssl.so
        COMMAND ${CMAKE_COMMAND} -E chdir ${PROJECT_DEBUGGER_WORKING_DIRECTORY}
            ln -sf libcrypto.so.1.1 libcrypto.so
    )
ENDIF()
