# 项目名字
SET(CURRENT_TARGET_NAME benchmark)
SET(CURRENT_SOURCE_DIR  ${CMAKE_CURRENT_SOURCE_DIR})

# 头文件目录
SET(CURRENT_INCLUDE_DIRS
    ${CURRENT_SOURCE_DIR}
    ${CMAKE_PROJECT_ROOT_DIR}/3rd/nanobench/src/include
    ${CMAKE_PROJECT_ROOT_DIR}/src/service
    ${CMAKE_PROJECT_ROOT_DIR}/src
)

# 宏定义、编译选项、链接库
IF(WIN32)
    # 宏定义
    SET(CURRENT_COMPILE_DEFINITIONS
        # ...
    )

    # 编译选项
    SET(CURRENT_COMPILE_OPTIONS
        # ...
    )

    # 链接库
    SET(CURRENT_LINK_LIBS
        mimalloc
        core
    )
ELSE()
    # 宏定义
    SET(CURRENT_COMPILE_DEFINITIONS
        # ...
    )

    # 编译选项
    SET(CURRENT_COMPILE_OPTIONS
        # ...
    )

    # 链接库
    SET(CURRENT_LINK_LIBS
        mimalloc
        core
    )
ENDIF()

# benchmark源文件
FILE(GLOB_RECURSE BENCHMARK_SRC_LIST
    ${CURRENT_SOURCE_DIR}/*.h
    ${CURRENT_SOURCE_DIR}/*.inl
    ${CURRENT_SOURCE_DIR}/*.hpp
    ${CURRENT_SOURCE_DIR}/*.c
    ${CURRENT_SOURCE_DIR}/*.cc
    ${CURRENT_SOURCE_DIR}/*.cpp
)

# nanobench源文件
SET(NANOBENCH_SRC_LIST
    ${CMAKE_PROJECT_ROOT_DIR}/3rd/nanobench/src/include/nanobench.h
)

# sensitive-word源文件
FILE(GLOB_RECURSE SENSITIVE_WORD_SRC_LIST
    ${CMAKE_PROJECT_ROOT_DIR}/src/service/sw/*.h
    ${CMAKE_PROJECT_ROOT_DIR}/src/service/sw/*.cpp
)

# 生成可执行文件
ADD_EXECUTABLE(${CURRENT_TARGET_NAME} ${BENCHMARK_SRC_LIST} ${NANOBENCH_SRC_LIST} ${SENSITIVE_WORD_SRC_LIST})
PROJECT_TARGET_APPLY_COMMON_OPTIONS(${CURRENT_TARGET_NAME})
TARGET_INCLUDE_DIRECTORIES(${CURRENT_TARGET_NAME} PRIVATE ${CURRENT_INCLUDE_DIRS})
TARGET_COMPILE_DEFINITIONS(${CURRENT_TARGET_NAME} PRIVATE ${CURRENT_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(${CURRENT_TARGET_NAME}     PRIVATE ${CURRENT_COMPILE_OPTIONS})
TARGET_LINK_DIRECTORIES(${CURRENT_TARGET_NAME}    PRIVATE ${PROJECT_DEBUGGER_WORKING_DIRECTORY})
TARGET_LINK_LIBRARIES(${CURRENT_TARGET_NAME}      PRIVATE ${CURRENT_LINK_LIBS})

# 其它设置
IF(WIN32)
    # MSVC运行库设置
    SET_PROPERTY(TARGET ${CURRENT_TARGET_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")

    # 导出所有符号设置
    # SET_PROPERTY(TARGET ${CURRENT_TARGET_NAME} PROPERTY WINDOWS_EXPORT_ALL_SYMBOLS True)
    # SET_PROPERTY(TARGET ${CURRENT_TARGET_NAME} PROPERTY ENABLE_EXPORTS True)

    # VS工程设置
    SET_PROPERTY(TARGET ${CURRENT_TARGET_NAME} PROPERTY FOLDER "projects")
    SET_PROPERTY(TARGET ${CURRENT_TARGET_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_DEBUGGER_WORKING_DIRECTORY}")

    SOURCE_GROUP(TREE ${CURRENT_SOURCE_DIR} PREFIX "benchmark"
        FILES ${BENCHMARK_SRC_LIST})
    SOURCE_GROUP(TREE ${CMAKE_PROJECT_ROOT_DIR}/3rd/nanobench/src/include PREFIX "nanobench"
        FILES ${NANOBENCH_SRC_LIST})
    SOURCE_GROUP(TREE ${CMAKE_PROJECT_ROOT_DIR}/src/service/sw PREFIX "sensitive-word"
        FILES ${SENSITIVE_WORD_SRC_LIST})
ENDIF()