# 项目名字
SET(CURRENT_TARGET_NAME core)
SET(CURRENT_SOURCE_DIR  ${CMAKE_CURRENT_SOURCE_DIR})

# 头文件目录
SET(CURRENT_PRIVATE_INCLUDE_DIRS
    # ...
)

SET(CURRENT_PUBLIC_INCLUDE_DIRS
    ${CURRENT_SOURCE_DIR}
    ${CMAKE_PROJECT_ROOT_DIR}/3rd/brynet/include
)

# 宏定义、编译选项、链接库
IF(WIN32)
    # 宏定义
    SET(CURRENT_PRIVATE_COMPILE_DEFINITIONS
        -DCORE_LIB_EXPORT
    )

    SET(CURRENT_PUBLIC_COMPILE_DEFINITIONS
        # ...
    )

    # 编译选项
    SET(CURRENT_COMPILE_OPTIONS
        # ...
    )

    # 链接库
    SET(CURRENT_LINK_LIBS
        # ...
    )
ELSE()
    # 宏定义
    SET(CURRENT_PRIVATE_COMPILE_DEFINITIONS
        -DCORE_LIB_EXPORT
    )

    SET(CURRENT_PUBLIC_COMPILE_DEFINITIONS
        # ...
    )

    # 编译选项
    SET(CURRENT_COMPILE_OPTIONS
        # ...
    )

    # 链接库
    SET(CURRENT_LINK_LIBS
        # ...
    )
ENDIF()

# core源文件
FILE(GLOB_RECURSE CORE_SRC_LIST
    ${CURRENT_SOURCE_DIR}/*.h
    ${CURRENT_SOURCE_DIR}/*.inl
    ${CURRENT_SOURCE_DIR}/*.hpp
    ${CURRENT_SOURCE_DIR}/*.c
    ${CURRENT_SOURCE_DIR}/*.cc
    ${CURRENT_SOURCE_DIR}/*.cpp
)

# brynet源文件
FILE(GLOB_RECURSE BRYNET_SRC_LIST
    ${CMAKE_PROJECT_ROOT_DIR}/3rd/brynet/include/brynet/*.h
    ${CMAKE_PROJECT_ROOT_DIR}/3rd/brynet/include/brynet/*.hpp
)

# 生成动态库
ADD_LIBRARY(${CURRENT_TARGET_NAME} SHARED  ${CORE_SRC_LIST} ${BRYNET_SRC_LIST})
PROJECT_TARGET_APPLY_COMMON_OPTIONS(${CURRENT_TARGET_NAME})
TARGET_INCLUDE_DIRECTORIES(${CURRENT_TARGET_NAME} PRIVATE ${CURRENT_PRIVATE_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(${CURRENT_TARGET_NAME} PUBLIC  ${CURRENT_PUBLIC_INCLUDE_DIRS})
TARGET_COMPILE_DEFINITIONS(${CURRENT_TARGET_NAME} PRIVATE ${CURRENT_PRIVATE_COMPILE_DEFINITIONS})
TARGET_COMPILE_DEFINITIONS(${CURRENT_TARGET_NAME} PUBLIC  ${CURRENT_PUBLIC_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(${CURRENT_TARGET_NAME}     PRIVATE ${CURRENT_COMPILE_OPTIONS})
TARGET_LINK_DIRECTORIES(${CURRENT_TARGET_NAME}    PRIVATE ${PROJECT_DEBUGGER_WORKING_DIRECTORY})
TARGET_LINK_LIBRARIES(${CURRENT_TARGET_NAME}      PUBLIC  ${CURRENT_LINK_LIBS})

# 其它设置
IF(WIN32)
    # MSVC运行库设置
    SET_PROPERTY(TARGET ${CURRENT_TARGET_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")

    # VS工程设置
    SET_PROPERTY(TARGET ${CURRENT_TARGET_NAME} PROPERTY FOLDER "projects")
    SET_PROPERTY(TARGET ${CURRENT_TARGET_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_DEBUGGER_WORKING_DIRECTORY}")

    SOURCE_GROUP(TREE ${CURRENT_SOURCE_DIR} PREFIX "core"
        FILES ${CORE_SRC_LIST})
    SOURCE_GROUP(TREE ${CMAKE_PROJECT_ROOT_DIR}/3rd/brynet/include/brynet PREFIX "brynet"
        FILES ${BRYNET_SRC_LIST})
ENDIF()